--- a/problems/exercise/Day 3 - Advent of Code 2025.htm
+++ b/problems/exercise/Day 3 - Advent of Code 2025.htm
@@ -89,22 +89,10 @@ on Mastodon.
 <body>
 
 <main>
-<article class="day-desc"><h2>--- Day 3: Lobby ---</h2><p>You descend a 
-short staircase, enter the surprisingly vast lobby, and are quickly 
-cleared by the security checkpoint. When you get to the main elevators, 
-however, you discover that each one has a red light above it: they're 
-all <em>offline</em>.</p>
-<p>"Sorry about that," an Elf apologizes as she tinkers with a nearby 
-control panel. "Some kind of electrical surge seems to have fried them. 
-I'll try to get them online soon."</p>
-<p>You explain your need to get further underground. "Well, you could at
- least take the escalator down to the printing department, not that 
-you'd get much further than that without the elevators working. That is,
- you could if the escalator weren't also <span title="Escalator temporarily stairs. Sorry for the convenience.">offline</span>."</p>
-<p>"But, don't worry! It's not fried; it just needs power. Maybe you can get it running while I keep working on the elevators."</p>
+<article class="day-desc"><h2>--- Day 3: Lobby ---</h2>
 <p>There are batteries nearby that can supply emergency power to the 
 escalator for just such an occasion. The batteries are each labeled with
- their <a href="https://adventofcode.com/2020/day/10">joltage</a> rating, a value from <code>1</code> to <code>9</code>. You make a note of their joltage ratings (your puzzle input). For example:</p>
+ their <em>joltage</em> rating, a value from <code>1</code> to <code>9</code>. You make a note of their joltage ratings (your puzzle input). For example:</p>
 <pre><code>987654321111111
 811111111111119
 234234234234278
@@ -124,10 +112,7 @@ you have a bank like <code>12345</code> and you turn on batteries <code>2</code>
 <p>The total output joltage is the sum of the maximum joltage from each bank, so in this example, the total output joltage is <code>98</code> + <code>89</code> + <code>78</code> + <code>92</code> = <code><em>357</em></code>.</p>
 <p>There are many batteries in front of you. Find the maximum joltage possible from each bank; <em>what is the total output joltage?</em></p>
 </article>
-<p>Your puzzle answer was <code>____</code>.</p><article class="day-desc"><h2 id="part2">--- Part Two ---</h2><p>The escalator doesn't move. The Elf explains that it probably needs more joltage to overcome the <a href="https://en.wikipedia.org/wiki/Static_friction" target="_blank">static friction</a>
- of the system and hits the big red "joltage limit safety override" 
-button. You lose count of the number of times she needs to confirm "yes,
- I'm sure" and decorate the lobby a bit while you wait.</p>
+<p>Your puzzle answer was <code>____</code>.</p><article class="day-desc"><h2 id="part2">--- Part Two ---</h2>
 <p>Now, you need to make the largest joltage by turning on <em>exactly twelve</em> batteries within each bank.</p>
 <p>The joltage output for the bank is still the number formed by the 
 digits of the batteries you've turned on; the only difference is that 
